--- a/fake-bank-backend/values.yaml
+++ b/fake-bank-backend/values.yaml
@@ -31,6 +31,11 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
+database:
+  postgresqlUsername: postgres
+  postgresqlPassword: backendPassword
+  postgresqlDatabase: fake-bank-backend
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
