--- a/fake-bank-backend/values.yaml
+++ b/fake-bank-backend/values.yaml
@@ -41,6 +41,10 @@ database:
       postgresqlPassword: backendPassword
       postgresqlDatabase: fake-bank-backend
 
+application:
+  server:
+    port: 8080
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
