Adding ingress and Spring profile config

--- a/fake-bank-backend/templates/deployment.yaml
+++ b/fake-bank-backend/templates/deployment.yaml
@@ -38,6 +38,9 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: {{ .Values.application.profile }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
