--- a/fake-bank-backend/values.yaml
+++ b/fake-bank-backend/values.yaml
@@ -18,13 +18,13 @@ service:
   port: 8080
 
 ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host:
+      paths: ['/']
 
   tls: []
   #  - secretName: chart-example-tls
@@ -42,6 +42,7 @@ database:
       postgresqlDatabase: fake-bank-backend
 
 application:
+  profile: default
   server:
     port: 8080
 
