--- a/fake-bank-backend/values.yaml
+++ b/fake-bank-backend/values.yaml
@@ -18,13 +18,13 @@ service:
   port: 8080
 
 ingress:
-  enabled: true
-  annotations:
-    kubernetes.io/ingress.class: nginx
+  enabled: false
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host:
-      paths: ['/']
+    - host: chart-example.local
+      paths: []
 
   tls: []
   #  - secretName: chart-example-tls
