--- a/extra/prometheus/prometheus.yml
+++ b/extra/prometheus/prometheus.yml
@@ -7,4 +7,4 @@ scrape_configs:
   - job_name: 'prometheus'
     metrics_path: '/metrics'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090', 'cadvisor:8080']
