Improve Keycloak import configuration

--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -18,12 +18,11 @@ services:
       DB_VENDOR: postgres
       DB_USER: keycloak
       DB_PASSWORD: keycloak
-      KEYCLOAK_USER: keycloak
-      KEYCLOAK_PASSWORD: keycloak
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: admin
+      KEYCLOAK_IMPORT: /opt/jboss/keycloak/imports/realm-export.json
     volumes:
       - './keycloak/realm-export.json:/opt/jboss/keycloak/imports/realm-export.json'
-    command:
-      - '-b 0.0.0.0 -Dkeycloak.import=/opt/jboss/keycloak/imports/realm-export.json'
     ports:
       - '8080:8080'
       - '9990:9990'
